# ustc_courses_cs

./: README.md  ustc.js
ArithmeticCore/: ArithmeticCore.sln
ArithmeticCore/ArithmeticCore/: AddBracket.cpp  ArithmeticCore.vcxproj  ArithmeticCore.vcxproj.filters  Calc.cpp  Generate.cpp  ProblemCompare.cpp  README.txt  Setting.cpp  arithmetic.cpp  arithmetic.h  core.cpp  core.h  main.cpp  random.cpp
DIP/DIP2019Task1/: report.md
DIP/DIP2019Task2/: 5.longest-palindromic-substring.py  report.html  report.md
Inter8086/: assignment.asm  helloworld.asm  mycode.asm
Net_experiment/: 计算机网络实验介绍2018.ppt
WordsFrequencyStatistics/: WordsFrequencyStatistics.cpp  WordsFrequencyStatistics.vcxproj  WordsFrequencyStatistics.vcxproj.filters  datastructure.h  functions.h  getallfiles.cpp  getcontent.cpp  statistics.cpp
algorithm/lab1/: CMakeLists.txt
algorithm/lab1/src/: main.cpp
algorithm/lab1/src/data/: copy.cpp  generate.cpp
algorithm/lab1/src/data_struction/: max_heep.cpp
algorithm/lab1/src/include/: data.h  data_struction.h  result_visual.h  sort_algorithms.h
algorithm/lab1/src/result_visual/: myprint.cpp
algorithm/lab1/src/sort_algorithms/: sort_insert.cpp  sort_max_heap.cpp  sort_merge.cpp  sort_quick.cpp
chaos/: .gitignore  ascii.sh  generator_ascii.py
cyber-security/: bare_conf.aux  bare_conf.bbl  bare_conf.blg  bare_conf.fdb_latexmk  bare_conf.fls  bare_conf.tex  bare_jrnl.tex  bibfile.bib
hackgame4/: DS_Store  bank.sh  cat.py  index.html  index.html.1  index.html.2  snake.py  test.sh  text.cpp
pattern_recognition/: perception.ipynb  perception.py
(+434 files in other folders)
